# ray-tracer

./: .gitignore  CMakeLists.txt  README.md  aabb.h  box.h  bvh_node.h  camera.h  hitable.h  hitable_list.h  main  main.cpp  material.h  medium.h  perlin.h  ray.h  sphere.h  tags  texture.h  vec3.h
main.dSYM/Contents/Resources/DWARF/: main
src/: aabb.h  box.cpp  box.h  bvh_node.cpp  bvh_node.h  camera.h  geometry.h  hitable.cpp  hitable.h  hitable_list.cpp  hitable_list.h  main.cpp  material.h  medium.cpp  medium.h  pdf.h  perlin.cpp  perlin.h  ray.h  rect.cpp  rect.h  scene.cpp  scene.h  smartpointerhelp.h  sphere.cpp  sphere.h  texture.h  vec3.h
src/accelerators/: bvh.cpp  bvh.h  bvh_node.cpp  bvh_node.h
src/core/: parallel.cpp  parallel.h
